Regression: Weighted Normal + Auto Smooth gives broken shading #121620
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Asset System
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#121620
Loading…
Reference in New Issue
Block a user
No description provided.
Delete Branch "%!s()"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: Windows 10, version 10.0.19045, 64-bit
Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2, NVIDIA Corporation, Driver version: 4.6.0 NVIDIA 536.67
Blender Version
Broken: Version 4.2.0 Alpha, branch: main, commit date: 2024-05-08 22:06, hash:
03cd8b359ba5
Worked: .
Broken in:
2f289857af
Short description of error
Adding a Smooth by Angle modifier to an object with weighted normals through the right-click context menu will give totally wrong results. Additionally, an even bigger problem is that you can no longer reorder the modifiers by default to fix the issue.
I know that you can stick to the last one with weighted normals as well and then move it up, but it's a huge workflow hassle and is not very user-friendly or discoverable and simply very confusing coming from erlier versions where it just worked.
Okay, so why is this issue so important?
This is how the shading is fixed/improved on most game models and can be done literally hundreds of times a day. As examples, this wastly improves the bake results on lowpolys in many cases or improves the shading for midpolys. The fact that it's now impossible to achieve without a deeper knowledge of Blender is very bad and a huge regression from 4.0 where it was handled automatically. Not to meantion all the extra click for just basic funtionality.
Solutions?
Make the Weight Normal modifier also stick to last and place it above the Smooth by Angle? In 4.0, this was handled automatically, and when importing models from 4.0 to 4.1, the order is always correct.
Also, make it optional to to pin the Smooth By Angle to last place, since this is far from optional in many cases and terrible for performance.
This is just my intuitiv suggestions, but perhaps there needs to be a more involvde design. Perhaps something like modifiers gruops where you can gruope modifers and move and pin them based on the gruope name. Then you could have a gruope callled "Normals".
This coulde also make it easy to organize and instance only some or all modifer gruopse to other objecs as well.
Exact steps for others to reproduce the error
Weighted Normal + Auto Smooth gives broken shading and can not be fixed after 2f289857afto Regression: Weighted Normal + Auto Smooth gives broken shading and can not be fixedThere is an option in the modifier dropdown to turn off the pinning. Then the modifier can be reordered however you want. We may want to make this more accessible to, I just want to clarify first that it's not impossible.
Yeah, I know, this is what I wrote in the report:
Edit - Or rather the reverse of it haha, but still it worked, and its more convient to pin both since you ussally whant the two modifer just after each other and at the bottom of the modifier stack.
Edit - A solution could also be something like modifiers groups where you can gruope modifers and move and pin them based on the group name. Then you could have a groupe callled "Normals" that are pinned and at the bottom of the stack.
This coulde also make it easy to organize and instance only some or all modifer gruopse to other objecs as well.
Regression: Weighted Normal + Auto Smooth gives broken shading and can not be fixedto Regression: Weighted Normal + Auto Smooth gives broken shadingHi, thanks for the report. Can confirm.
Current workaround involves few more clicks and pinning modifier to the last might break shading with combination of other modifiers so raising the priority.
also cc @JacquesLucke
After that UI change, the pinning state is clearly visible and easy to disable. The order does matter now while it didn't before, but that's not a bug, just a consequence of the way things work now. Arguably it's more clear too, and helps make the way the weighted normal modifier works clearer, or helps show when there is unnecessary work going on. Because of all that I'll close this report, thanks.